--- a/Unit1/Flask/microblog/app/templates/index.html
+++ b/Unit1/Flask/microblog/app/templates/index.html
@@ -1,8 +1,9 @@
-{% extends "base.html"}
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Hello, {{ user.Username }}!</h1>
     {% for post in posts %}
     <div><p>{{ post.Author.Username }} says:
     <b>{{ post.Body }}</b></p></div>
     {% endfor %}
-</body>
-</html>
+{%endblock%}
